Applied styling for reusable profile images

--- a/channel.html
+++ b/channel.html
@@ -155,7 +155,7 @@
 			<div class="content__header content-header">
 				<div class="content-header__info content-info">
 					<div class="content-info__userpic info-userpic">
-						<img class="info-userpic__image" src="build/images/profile.png" alt="Profile picture">
+						<img class="info-userpic__image profile-image profile-image_medium" src="build/images/profile.png" alt="Profile picture">
 					</div>
 					<div class="content-info__description info-description">
 						<h6 class="info-description__title">Margaret Phelps</h6>
@@ -183,7 +183,7 @@
 					</nav>
 					<div class="content-player player">
 						<div class="content-player__image player-image">
-							<img class="player-image__pic" src="build/images/channel-video.png" alt="Channel main image">
+							<img class="player-image__pic " src="build/images/channel-video.png" alt="Channel main image">
 							<span class="player-image__time"></span>
 						</div>
 						<div class="content-player__description player-description">
@@ -196,15 +196,15 @@
 				<nav class="content-main__recommended recommended">
 					<h6 class="recommended__title">Recommended channels</h6>
 					<a class="recommended__item recommended-item" rel="author">
-						<img class="recommended-item__image" src="build/images/recommended/medium-1.png" class="Recommended item picture">
+						<img class="recommended-item__image profile-image profile-image_small" src="build/images/recommended/medium-1.png" class="Recommended item picture">
 						<p class="recommended-item__name">Flora Benson</p>
 					</a>
 					<a class="recommended__item recommended-item" rel="author">
-						<img class="recommended-item__image" src="build/images/recommended/medium-2.png" class="Recommended item picture">
+						<img class="recommended-item__image profile-image profile-image_small" src="build/images/recommended/medium-2.png" class="Recommended item picture">
 						<p class="recommended-item__name">Violet Cobb</p>
 					</a>
 					<a class="recommended__item recommended-item" rel="author">
-						<img class="recommended-item__image" src="build/images/recommended/medium-3.png" class="Recommended item picture">
+						<img class="recommended-item__image profile-image profile-image_small" src="build/images/recommended/medium-3.png" class="Recommended item picture">
 						<p class="recommended-item__name">Phillip Mullins</p>
 					</a>										
 				</nav>
