--- a/home.html
+++ b/home.html
@@ -150,7 +150,7 @@
 			<div class="gallery-small">
 				<div class="gallery-header">
 					<div class="gallery-header_left">
-						<img class="gallery-header__image" src="build/images/header-profile.png" alt="Profile picture">
+						<img class="gallery-header__image profile-image profile-image_small" src="build/images/header-profile.png" alt="Profile picture">
 						<h3 class="gallery-header__title">Dollie Blair</h3>					
 					</div>
 					<div class="gallery-header_right">
@@ -383,7 +383,7 @@
 			<div class="gallery-small">
 				<div class="gallery-header">
 					<div class="gallery-header_left">
-						<img class="gallery-header__image gallery-img_small" src="build/images/videoplayer-img.png" alt="Gallery image">
+						<img class="gallery-header__image profile-image profile-image_small" src="build/images/videoplayer-img.png" alt="Gallery image">
 						<div class="gallery-header__wrap">
 							<h4 class="gallery-header__title">Food & drink</h4>
 							<p class="gallery-header__text">Recommended channel for you</p>								
@@ -400,7 +400,7 @@
 				<div class="gallery-small__wrapper">				
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-12.png" alt="Gallery image">
+							<img class="gallery-small__image"  src="build/images/slider/slider-12.png" alt="Gallery image">
 							<span class="gallery-small__duration">7:36</span>
 						</div>
 						<div class="gallery-small__description">
