Fixed mobile version styling

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 		<div class="menu">
 			<img src="build/images/burger.png" srcset="build/images/menu.svg">
 		</div>
-		<div class="logo">
+		<div class="logo logo-home">
 			<img class="logo-button" src="build/images/ybutton.png" alt="Logo">
 			<img class="logo-youtube" src="build/images/Youtube.png" alt="Youtube logo">
 		</div>
