Changed alt attribute text for more informative

--- a/channel.html
+++ b/channel.html
@@ -100,27 +100,27 @@
 				<div class="sidebar__subscriptions subscriptions">
 					<h4 class="subscriptions-header">Subscriptions</h4>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-1.png" alt="Subscriptions item picture">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-1.png" alt="Gussie Singleton avatar">
 						<p class="subscriptions-item__text">Gussie Singleton</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-2.png" alt="Subscriptions item picture">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-2.png" alt="Nora Francis avatar">
 						<p class="subscriptions-item__text">Nora Francis</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-3.png" alt="Subscriptions item picture">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-3.png" alt="Belle Briggs avatar">
 						<p class="subscriptions-item__text">Belle Briggs</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-4.png" alt="Subscriptions item picture">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-4.png" alt="Eunice Cortez avatar">
 						<p class="subscriptions-item__text">Eunice Cortez</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-5.png" alt="Subscriptions item picture">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-5.png" alt="Emma Hanson avatar">
 						<p class="subscriptions-item__text">Emma Hanson</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-6.png" alt="Subscriptions item picture">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-6.png" alt="Leah Berry avatar">
 						<p class="subscriptions-item__text">Leah Berry</p>
 					</div>																
 				</div>										
@@ -150,12 +150,12 @@
 		</nav>
 		<div class="content content_full">
 			<div class="content-top">
-				<img class="content-top__image" src="build/images/channel-bg.png" alt="Channel top image">
+				<img class="content-top__image" src="build/images/channel-bg.png" alt="Channel background image">
 			</div>
 			<div class="content__header content-header">
 				<div class="content-header__info content-info">
 					<div class="content-info__userpic info-userpic">
-						<img class="info-userpic__image profile-image profile-image_medium" src="build/images/profile.png" alt="Profile picture">
+						<img class="info-userpic__image profile-image profile-image_medium" src="build/images/profile.png" alt="Margaret Phelps avatar">
 					</div>
 					<div class="content-info__description info-description">
 						<h6 class="info-description__title">Margaret Phelps</h6>
@@ -224,7 +224,7 @@
 				<div class="gallery-small__wrapper">				
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/channel/channel-1.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/channel/channel-1.png" alt="Astronomy or Astrology">
 							<span class="gallery-small__duration">7:36</span>
 						</div>
 						<div class="gallery-small__description">
@@ -238,7 +238,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/channel/channel-2.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/channel/channel-2.png" alt="Advertising Outdoors">
 							<span class="gallery-small__duration">2:19</span>
 						</div>
 						<div class="gallery-small__description">
@@ -252,7 +252,7 @@
 					</div>					
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/channel/channel-3.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/channel/channel-3.png" alt="Radio Astronomy">
 							<span class="gallery-small__duration">9:05</span>
 						</div>
 						<div class="gallery-small__description">
@@ -266,7 +266,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/channel/channel-4.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/channel/channel-4.png" alt="A Good Autoresponder">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -280,7 +280,7 @@
 					</div>								
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/channel/channel-5.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/channel/channel-5.png" alt="Baby Monitor Technology">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -294,7 +294,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/channel/channel-6.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/channel/channel-6.png" alt="Baby Monitor Technology">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -308,7 +308,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/channel/channel-1.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/channel/channel-1.png" alt="Astronomy or Astrology">
 							<span class="gallery-small__duration">7:36</span>
 						</div>
 						<div class="gallery-small__description">
@@ -322,7 +322,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/channel/channel-2.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/channel/channel-2.png" alt="Advertising Outdoors">
 							<span class="gallery-small__duration">2:19</span>
 						</div>
 						<div class="gallery-small__description">
@@ -336,7 +336,7 @@
 					</div>					
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/channel/channel-3.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/channel/channel-3.png" alt="Radio Astronomy">
 							<span class="gallery-small__duration">9:05</span>
 						</div>
 						<div class="gallery-small__description">
