--- a/home.html
+++ b/home.html
@@ -98,30 +98,30 @@
 				<div class="sidebar__subscriptions subscriptions">
 					<h4 class="subscriptions-header">Subscriptions</h4>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-1.png" alt="Subscriptions item picture">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-1.png" alt="Gussie Singleton avatar">
 						<p class="subscriptions-item__text">Gussie Singleton</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-2.png" alt="Subscriptions item picture">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-2.png" alt="Nora Francis avatar">
 						<p class="subscriptions-item__text">Nora Francis</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-3.png" alt="Subscriptions item picture">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-3.png" alt="Belle Briggs avatar">
 						<p class="subscriptions-item__text">Belle Briggs</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-4.png" alt="Subscriptions item picture">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-4.png" alt="Eunice Cortez avatar">
 						<p class="subscriptions-item__text">Eunice Cortez</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-5.png" alt="Subscriptions item picture">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-5.png" alt="Emma Hanson avatar">
 						<p class="subscriptions-item__text">Emma Hanson</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-6.png" alt="Subscriptions item picture">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-6.png" alt="Leah Berry avatar">
 						<p class="subscriptions-item__text">Leah Berry</p>
 					</div>																
-				</div>										
+				</div>									
 			</div>
 			<div class="sidebar__settings sidebar-settings">
 				<img class="sidebar-settings__image" src="build/images/sidebar/settings.png" srcset="build/images/sidebar/settings.svg">
@@ -150,7 +150,7 @@
 			<div class="gallery-small">
 				<div class="gallery-header">
 					<div class="gallery-header_left">
-						<img class="gallery-header__image profile-image profile-image_small" src="build/images/header-profile.png" alt="Profile picture">
+						<img class="gallery-header__image profile-image profile-image_small" src="build/images/header-profile.png" alt="Dollie Blair avatar">
 						<h3 class="gallery-header__title">Dollie Blair</h3>					
 					</div>
 					<div class="gallery-header_right">
@@ -163,7 +163,7 @@
 				<div class="gallery-small__wrapper">				
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-1.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-1.png" alt="A Brief History Of Creation">
 							<span class="gallery-small__duration">7:36</span>
 						</div>
 						<div class="gallery-small__description">
@@ -177,7 +177,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-2.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-2.png" alt="Selecting The Right Hotel">
 							<span class="gallery-small__duration">2:19</span>
 						</div>
 						<div class="gallery-small__description">
@@ -191,7 +191,7 @@
 					</div>					
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-3.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-3.png" alt="Asteroids">
 							<span class="gallery-small__duration">9:05</span>
 						</div>
 						<div class="gallery-small__description">
@@ -205,7 +205,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-4.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-4.png" alt="Telescope 101">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -219,7 +219,7 @@
 					</div>								
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-5.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-5.png" alt="Medical Care Is Just">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -233,7 +233,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-6.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-6.png" alt="Moon Gazing">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -247,7 +247,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-1.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-1.png" alt="A Brief History Of Creation">
 							<span class="gallery-small__duration">7:36</span>
 						</div>
 						<div class="gallery-small__description">
@@ -261,7 +261,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-2.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-2.png" alt="Selecting The Right Hotel">
 							<span class="gallery-small__duration">2:19</span>
 						</div>
 						<div class="gallery-small__description">
@@ -275,7 +275,7 @@
 					</div>					
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-3.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-3.png" alt="Asteroids">
 							<span class="gallery-small__duration">9:05</span>
 						</div>
 						<div class="gallery-small__description">
@@ -300,7 +300,7 @@
 				<div class="gallery-medium__wrapper">
 					<div class="gallery-medium__item medium-item">
 						<div class="gallery-medium__thumbnail">
-							<img class="gallery-medium__image" src="build/images/medium-1.png" alt="Gallery image">
+							<img class="gallery-medium__image" src="build/images/medium-1.png" alt="Dude You Re Getting A Telescope">
 							<span class="gallery-medium__duration">3.40</span>
 						</div>
 						<div class="gallery-medium__description">
@@ -316,7 +316,7 @@
 					</div>
 					<div class="gallery-medium__item medium-item">
 						<div class="gallery-medium__thumbnail">
-							<img class="gallery-medium__image" src="build/images/medium-2.png" alt="Gallery image">
+							<img class="gallery-medium__image" src="build/images/medium-2.png" alt="Moon Gazing">
 							<span class="gallery-medium__duration">2.40</span>
 						</div>
 						<div class="gallery-medium__description">
@@ -332,7 +332,7 @@
 					</div>
 					<div class="gallery-medium__item medium-item">
 						<div class="gallery-medium__thumbnail">
-							<img class="gallery-medium__image" src="build/images/medium-3.png" alt="Gallery image">
+							<img class="gallery-medium__image" src="build/images/medium-3.png" alt="Moon Gazing">
 							<span class="gallery-medium__duration">2.12</span>
 						</div>
 						<div class="gallery-medium__description">
@@ -348,7 +348,7 @@
 					</div>
 					<div class="gallery-medium__item medium-item">
 						<div class="gallery-medium__thumbnail">
-							<img class="gallery-medium__image" src="build/images/medium-1.png" alt="Gallery image">
+							<img class="gallery-medium__image" src="build/images/medium-1.png" alt="Dude You Re Getting A Telescope">
 							<span class="gallery-medium__duration">3.40</span>
 						</div>
 						<div class="gallery-medium__description">
@@ -364,7 +364,7 @@
 					</div>
 					<div class="gallery-medium__item medium-item">
 						<div class="gallery-medium__thumbnail">
-							<img class="gallery-medium__image" src="build/images/medium-2.png" alt="Gallery image">
+							<img class="gallery-medium__image" src="build/images/medium-2.png" alt="Moon Gazing">
 							<span class="gallery-medium__duration">2.40</span>
 						</div>
 						<div class="gallery-medium__description">
@@ -383,9 +383,9 @@
 			<div class="gallery-small">
 				<div class="gallery-header">
 					<div class="gallery-header_left">
-						<img class="gallery-header__image profile-image profile-image_small" src="build/images/videoplayer-img.png" alt="Gallery image">
+						<img class="gallery-header__image profile-image profile-image_small" src="build/images/videoplayer-img.png" alt="Food & Drink">
 						<div class="gallery-header__wrap">
-							<h4 class="gallery-header__title">Food & drink</h4>
+							<h4 class="gallery-header__title">Food & Drink</h4>
 							<p class="gallery-header__text">Recommended channel for you</p>								
 						</div>				
 					</div>
@@ -400,7 +400,7 @@
 				<div class="gallery-small__wrapper">				
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image"  src="build/images/slider/slider-12.png" alt="Gallery image">
+							<img class="gallery-small__image"  src="build/images/slider/slider-12.png" alt="Astronomy Or Astrology">
 							<span class="gallery-small__duration">7:36</span>
 						</div>
 						<div class="gallery-small__description">
@@ -414,7 +414,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-11.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-11.png" alt="Advertising outdoors">
 							<span class="gallery-small__duration">2:19</span>
 						</div>
 						<div class="gallery-small__description">
@@ -428,7 +428,7 @@
 					</div>					
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-10.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-10.png" alt="Radio astronomy">
 							<span class="gallery-small__duration">9:05</span>
 						</div>
 						<div class="gallery-small__description">
@@ -442,7 +442,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-9.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-9.png" alt="A good autoresponder">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -456,7 +456,7 @@
 					</div>								
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-8.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-8.png" alt="Baby Monitor Technology">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -470,7 +470,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-7.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-7.png" alt="Baby Monitor Technology">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -484,7 +484,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-12.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-12.png" alt="Astronomy Or Astrology">
 							<span class="gallery-small__duration">7:36</span>
 						</div>
 						<div class="gallery-small__description">
@@ -498,7 +498,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-11.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-11.png" alt="Advertising outdoors">
 							<span class="gallery-small__duration">2:19</span>
 						</div>
 						<div class="gallery-small__description">
@@ -512,7 +512,7 @@
 					</div>					
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-10.png" alt="Gallery image">
+							<img class="gallery-small__image" src="build/images/slider/slider-10.png" alt="Radio astronomy">
 							<span class="gallery-small__duration">9:05</span>
 						</div>
 						<div class="gallery-small__description">
