--- a/video.html
+++ b/video.html
@@ -50,7 +50,7 @@
 	<section class="videoplayer">
 		<div class="videoplayer__main videoplayer-main">
 			<div class="videoplayer-main__image videoplayer-img">
-				<img class="videoplayer-img__item" src="build/images/player.png" alt="Videoplayer image">
+				<img class="videoplayer-img__item" src="build/images/player.png" alt="Playing image">
 				<div class="videoplayer__navigation videoplayer-navigation">
 					<div class="videoplayer-navigation__time videoplayer-time">
 						<span class="videoplayer-time__item"> 
@@ -135,7 +135,7 @@
 			<div class="videoplayer-summary">
 				<div class="videoplayer-description">
 					<div class="videoplayer-description__wrapper">
-						<img class="videoplayer-description__image" src="build/images/videoplayer-img.png" alt="Channel icon image">
+						<img class="videoplayer-description__image" src="build/images/videoplayer-img.png" alt="Food & Drink">
 					</div>
 					<div class="videoplayer-description__text">
 						<h5 class="videoplayer-description__category">Food & Drink</h5>
@@ -161,7 +161,7 @@
 			</div>
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="build/images/video/playlist-1.png" alt="Playlist image 1">
+					<img class="playlist-image__item" src="build/images/video/playlist-1.png" alt="Baby Monitor Technology">
 					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
@@ -171,7 +171,7 @@
 			</div>
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="build/images/video/playlist-2.png" alt="Playlist image 2">
+					<img class="playlist-image__item" src="build/images/video/playlist-2.png" alt="A good autoresponder">
 					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
@@ -181,7 +181,7 @@
 			</div>
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="build/images/video/playlist-3.png" alt="Playlist image 1">
+					<img class="playlist-image__item" src="build/images/video/playlist-3.png" alt="Selecting The Right Hotel">
 					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
@@ -191,7 +191,7 @@
 			</div>
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="build/images/video/playlist-1.png" alt="Playlist image 1">
+					<img class="playlist-image__item" src="build/images/video/playlist-1.png" alt="Baby Monitor Technology">
 					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
@@ -201,7 +201,7 @@
 			</div>
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="build/images/video/playlist-2.png" alt="Playlist image 2">
+					<img class="playlist-image__item" src="build/images/video/playlist-2.png" alt="A Good Autoresponder">
 					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
@@ -210,7 +210,7 @@
 				</div>			
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="build/images/video/playlist-4.png" alt="Playlist image 1">
+					<img class="playlist-image__item" src="build/images/video/playlist-4.png" alt="Baby Monitor Technology">
 					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
